<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back">
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_image"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/first_name" />

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvFirstName"
                style="@style/TextNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:text="@string/dummy_first_name" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/last_name" />

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvLastName"
                style="@style/TextNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:text="@string/dummy_last_name" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/join" />

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvJoined"
                style="@style/TextNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:text="@string/dummy_input" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/time_elapsed" />

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvElapsed"
                style="@style/TextNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:text="@string/dummy_input" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/address" />

            <TextView
                style="@style/TextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvAddress"
                style="@style/TextNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:text="@string/street" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>