<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:title="@string/app_name" >
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/exceptionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="100dp"
                        android:src="@drawable/ic_broken_link"
                        android:contentDescription="@string/avatar"/>

                    <TextView
                        android:id="@+id/tvTittle"
                        style="@style/TextBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/dummy_input"/>

                    <TextView
                        android:id="@+id/tvDescription"
                        style="@style/TextItalic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/dummy_input"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <include layout="@layout/shimmer_item" />

                        <include layout="@layout/shimmer_item" />

                        <include layout="@layout/shimmer_item" />

                        <include layout="@layout/shimmer_item" />

                        <include layout="@layout/shimmer_item" />

                        <include layout="@layout/shimmer_item" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvListUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_user" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/footer_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <include layout="@layout/shimmer_item" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.facebook.shimmer.ShimmerFrameLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>